--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,22 @@
 {
-  "name": "Gakmas Damage Calculator",
-  "short_name": "GakmasCalc",
-  "id": "./",
-  "start_url": "./",
-  "scope": "./",
+  "name": "学マス スコア最適化 & 比較",
+  "short_name": "学マススコア計算機",
+  "id": "/gakmas-score-calculator/",
+  "start_url": "/gakmas-score-calculator/",
+  "scope": "/gakmas-score-calculator/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#1976d2",
-  "description": "ダメージ計算機のPWA対応版",
+  "description": "学マス ダメージ計算機のPWA版",
   "icons": [
     {
-      "src": "./icon-192.png",
+      "src": "/gakmas-score-calculator/icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "./icon-512.png",
+      "src": "/gakmas-score-calculator/icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
