--- a/manifest.json
+++ b/manifest.json
@@ -1,37 +1,25 @@
 {
   "name": "学マス スコア最適化 & 比較",
   "short_name": "学マススコア計算機",
-  "id": "/gakmas-score-calculator/",
-  "start_url": "/gakmas-score-calculator/",
-  "scope": "/gakmas-score-calculator/",
+  "id": "./",
+  "start_url": "./",
+  "scope": "./",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#1976d2",
   "description": "学マス ダメージ計算機のPWA版",
   "icons": [
     {
-      "src": "/gakmas-score-calculator/icon-192.png",
+      "src": "icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "any"
+      "purpose": "any maskable"
     },
     {
-      "src": "/gakmas-score-calculator/icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "maskable"
-    },
-    {
-      "src": "/gakmas-score-calculator/icon-512.png",
+      "src": "icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "/gakmas-score-calculator/icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "maskable"
+      "purpose": "any maskable"
     }
   ]
 }
